--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+table {
+  border: 2px solid rgb(30, 64, 175);
+}
+
+th {
+  border-bottom: 1px solid black;
+  text-align: left;
+  padding: 10px 20px 10px 20px ;
+}
+
+td {
+  padding: 10px 20px 10px 20px ;
+  text-align: left;
 }
